# Techies

./: .gitignore  .style.yapf  .techiesbase  .tool-versions  Gemfile  MANIFEST.in  Procfile  README.md  Rakefile  flake.nix  pyproject.toml  run.py  samplecrew.py
.cursor/rules/: use-venv-development.mdc
.devcontainer/: devcontainer.json
.github/workflows/: crew-checks.yml  pytest.yml  sync-docs-to-wiki.yml
docs/: 01-Getting-Started-With-Techies.md  02-Running-Predefined-Crews.md  03-Understand-Crew-Configurations.md  04-Modifying-Existing-Crews.md  05-Create-Your-Own-Crew.md  06-Create-Your-Own-Tool.md  07-Using-Callbacks-in-Tasks.md  08-Validate-Your-Own-Crew.md  Modifying-Existing-Crews.md  Running-Predefined-Crews.md
fixtures/: agents.yml  crews.yml  tasks.yml
fixtures/html5crew/: agents.yml  crews.yml
mechanicsgencrew/callbacks/: jsonsearch.py
mechanicsgencrew/refs/mechanics_db/: platformer_mechanics.json  platformer_mechanics_embedded.json
ref/html_game_examples/: checkers.html  sudoku.html
techies/: _cli.py  agent.py  callbacks.py  cli.py  config_schema.py  crew.py  fixture_loader.py  game_specs.py  task.py  tools.py  utils.py
techies/cli/: main.py
techies/cli/commands/: __init__.py  check.py  crew_ops.py  get_runtime_path.py  introduce.py  list.py  list_callbacks.py  list_commands.py  list_tools.py  run.py
techies/cli/utils/: click_extensions.py  crew_helpers.py  deprecator.py  dispatch.py  load_callbacks.py  load_tools.py
techies/fixtures/: agents.yml  tasks.yml
techies/fixtures/.template/: agents.yml  crews.yml  tasks.yml
techies/fixtures/hierarchycrew/: agents.yml  crews.yml  tasks.yml
techies/fixtures/hierarchycrewv2/: tasks.yml
techies/fixtures/html5crew/: agents.yml  crews.yml  tasks.yml
techies/fixtures/mechanicsgencrew/: agents.yml  crews.yml  tasks.yml
techies/fixtures/mechanicsgencrew/callbacks/: jsonsearch.py
techies/fixtures/mechanicsgencrew/refs/mechanics_db/: jsonsearch.py
techies/fixtures/mechanicsgencrew/tools/: google_search_tool.py  image_tools.py  query_mechanics_tool.py  sounds_tools.py
techies/fixtures/phaser_crew_naive/: agents.yml  crews.yml  readme.md  tasks.yml
techies/fixtures/phaser_crew_naive/tools/: icon.py  pack.py  read_example.py  splash.py
techies/fixtures/phaser_crew_naive/tools/template/: host_test.py  index.html  index_template.html
techies/fixtures/phaser_crew_naive/tools/template/assets/: level1.json
techies/fixtures/phaser_crew_naive/tools/template/js/: common.js  main.js
techies/predefined_tools/: __init__.py  base_tool.py  batch_read_files_tool.py  google_search_tool.py  html_examples_tool.py  image_tools.py  list_files_tool.py  query_mechanics_tool.py  read_file_tool.py  sound_tools.py  write_file_tool.py
techies/refs/allgames/: alphabetzoo.html  cipherchronicles.html  crossingcharacter.html  equationexplorer.html  letterloftballoons.html  lexiconlegends.html  mathdash.html  mathematicalmayhem.html  numerictowers.html  retrowordtetris.html  spellsiege.html  sudokudetective.html  wordcollapse.html  wordminesweeper.html  wordsmithworkshop.html  wordsnake.html  wordwheels.html
techies/refs/html_game_available/: tictactoe.html
techies/refs/html_game_examples/: checkers.html  sudoku.html  wordle.html
techies/refs/mechanics_db/: mechanics.json  mechanics_with_embeddings.json  resources.md
techies/refs/scaffold/: build.rb  game.html.slim  game.js  game_styles.sass  head.js  head_styles.sass
tests/: helpers.py  test_utils.py
tests/dependency/: test_crewai_basic_functions.py  test_crewai_known_issues.py  test_openai_availability.py
tests/tools/: test_crewai_use_file_tools.py  test_get_all_tools.py
