[tool.poetry]
authors = ["Kaidong Hu"]
description = "LLM enhanced game generation"
name =  "techies"
readme = "README.md"
version = "1.0.1"

[tool.poetry.scripts]
techies = "techies.cli.main:main"

[tool.poetry.dependencies]
python                 =  ">=3.12"

agentops               =  "^0.3.10"
beautifulsoup4         =  "^4.12.3"
# Two unfixed bugs in crewai prevents us upgrading to 0.4x
# - Agent not able to delegate task if extra tools are assigned
# - Agent not able to invoke non-deterministic tool even with cache disabled
#crewai                 =  {extras    =  ["tools"],                                  version  =  "0.102.0"}
crewai                 =  {git = "https://github.com/hukaidong/crewAI", rev = "868b3a6c94ed952d6bd87b8bbe732da192687aed", extras = ["tools"] }
freesound-python       =  {git = "https://github.com/MTG/freesound-python", rev = "5be99a3689d17303c01cb122bbb0d5a96eba04f6"}

# gpt4all                =  {version = "^2.7.0", optional = true}
# groq                   =  {version = "^0.10.0", optional = true}
# langchain-groq         =  {version = "^0.1.6", optional = true}
# langchain-huggingface  =  {version = "^0.0.3", optional = true}
# 
# [tool.poetry.extras]
# all = ["gpt4all", "groq", "langchain-groq", "langchain-huggingface"]
# groq = ["groq", "langchain-groq"]
# local = ["gpt4all", "langchain-huggingface"]
click = "^8.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "focus: focus on a specific test",
    ]
