[tool.poetry]
authors = ["Kaidong Hu"]
description = "LLM enhanced game generation"
name = "techies"
readme = "README.md"
version = "1.3.0"

[tool.poetry.scripts]
techies = "techies.cli.main:main"

[tool.poetry.dependencies]
python                 =  ">=3.12,<3.13"
# agentops is optional and require user to install manually
#agentops               =  "^0.4.6"  
beautifulsoup4         =  "^4.12.3"
# Two unfixed bugs in crewai prevents us upgrading to 0.4x
# - Agent not able to delegate task if extra tools are assigned
# - Agent not able to invoke non-deterministic tool even with cache disabled
#crewai                 =  {extras    =  ["tools"],                                  version  =  "0.102.0"}
crewai = { git = "https://github.com/hukaidong/crewAI", rev = "f618a17a27689f290d97a22758c536ad6a1eea9d", extras = [
    "tools",
] }
freesound-python = { git = "https://github.com/MTG/freesound-python", rev = "5be99a3689d17303c01cb122bbb0d5a96eba04f6" }

# gpt4all                =  {version = "^2.7.0", optional = true}
# groq                   =  {version = "^0.10.0", optional = true}
# langchain-groq         =  {version = "^0.1.6", optional = true}
# langchain-huggingface  =  {version = "^0.0.3", optional = true}
# 
# [tool.poetry.extras]
# all = ["gpt4all", "groq", "langchain-groq", "langchain-huggingface"]
# groq = ["groq", "langchain-groq"]
# local = ["gpt4all", "langchain-huggingface"]
click = "^8.1.8"
jsonschema = "^4.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["focus: focus on a specific test"]
