[project]
name = "techies"
version = "1.3.0"
description = "LLM enhanced game generation"
authors = [{ name = "Kaidong Hu" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "beautifulsoup4>=4.12.3,<5",
    "crewai[tools]",
    "freesound-python",
    "click>=8.1.8,<9",
    "jsonschema>=4.23.0,<5",
    "sentence-transformers>=4.1.0,<5",
    "faiss-cpu>=1.11.0,<2",
    "numpy>=2.2.5",
]

[project.scripts]
techies = "techies.cli.main:main"

[dependency-groups]
dev = ["pytest>=8.3.3,<9"]

[tool.uv]

[tool.uv.sources]
crewai = { git = "https://github.com/hukaidong/crewAI", rev = "57dfe5fd5e0da30228916b216a71b456f86c84a2" }
freesound-python = { git = "https://github.com/MTG/freesound-python", rev = "5be99a3689d17303c01cb122bbb0d5a96eba04f6" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = ["focus: focus on a specific test"]
